src/test/ui/issues/issue-23189.stderr
error[E0574]: expected struct, variant or union type, found module `module`
  --> $DIR/issue-23189.rs:4:13
   |
LL |     let _ = module { x: 0 };
   |             ^^^^^^ not a struct, variant or union type

error: aborting due to previous error

